# hobgoblin-engine

EngineCore/Modules/Graphics/Include/Hobgoblin/Graphics/: Texture_packing.hpp
EngineCore/Modules/Utility/Include/Hobgoblin/Utility/: State_scheduler_simple.hpp
Overlays/SPeMPE/: CMakeLists.txt
Overlays/SPeMPE/Examples/: Minimal_multiplayer.cpp  Temp.cpp
Overlays/SPeMPE/Include/SPeMPE/GameObjectFramework/: Game_object_bases.hpp
ProofOfConceptProjects/TheRavine/: CMakeLists.txt  CMakeSettings.json  Conan_install.bat  conanfile.txt
ProofOfConceptProjects/TheRavine/Source/: Main.cpp  World.cpp  World.hpp
ProofOfConceptProjects/Typhon/: CMakeLists.txt
ProofOfConceptProjects/Typhon/source/SPeMPE/: SPeMPE.hpp
ProofOfConceptProjects/Typhon/source/SPeMPE/Implementation/: Context_components.cpp  Game_context.cpp  Game_object_framework.cpp  Keyboard_input.cpp  Networking_manager.cpp  Synchronized_object_registry.cpp  Window_manager.cpp
ProofOfConceptProjects/Typhon/source/SPeMPE/Include/: Game_context.hpp  Game_object_framework.hpp  Keyboard_input.hpp  Networking_manager.hpp  Networking_manager_interface.hpp  Synchronized_object_registry.hpp  Window_manager.hpp  Window_manager_interface.hpp
ProofOfConceptProjects/Typhon/source/Typhon/Framework/: Extensions.cpp  Extensions.hpp
ProofOfConceptProjects/Typhon/source/Typhon/GameObjects/Control/: Controls_manager.cpp  Environment_manager.cpp  Environment_manager.hpp  Gameplay_manager.cpp  Gameplay_manager.hpp
ProofOfConceptProjects/Typhon/source/Typhon/GameObjects/Gameplay/: Physics_bullet.cpp  Physics_player.cpp
ProofOfConceptProjects/Typhon/source/Typhon/GameObjects/UI/: Main_menu.cpp
ProofOfConceptProjects/Typhon/source/Typhon/Main/: Main_impl.cpp
